<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.AuthActivity"
    android:background="@drawable/background_img">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="30dp"
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_app_name"
        android:textColor="@color/white"
        android:drawablePadding="28dp"
        app:drawableTopCompat="@drawable/logo"
        />
    <androidx.cardview.widget.CardView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        android:id="@+id/loginCard"
        app:cardBackgroundColor="@color/white"
        android:layout_marginBottom="-28dp"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            >
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="28sp"
                android:textStyle="bold"/>
             <TextView
                 android:textColor="#8F8E8E"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/please_login_with_your_inforamtion"
                 />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:id="@+id/emailField"
                android:padding="10dp"
                android:hint="@string/email"
                app:hintTextColor="#787878"
                android:textColorHint="#787878"
                android:background="@drawable/edit_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:startIconDrawable="@drawable/ic_email_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordField"
                android:padding="10dp"
                android:hint="@string/password"
                app:hintTextColor="#787878"
                android:textColorHint="#787878"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/edit_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/password_text_field"
                    android:inputType="textPassword"
                    android:textColor="@color/black"

                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/remeberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_forgot_my_password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/login_btn"
                app:cornerRadius="32dp"
                android:textSize="20sp"

                />
            <TextView
                android:id="@+id/switch_to_sign_in"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_in"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/signInCard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-28dp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="28sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:alpha="0.7"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:id="@+id/SignUpEmailField"
                android:padding="10dp"
                android:hint="@string/email"
                android:background="@drawable/edit_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="#787878"
                android:textColorHint="#787878"
                app:startIconDrawable="@drawable/ic_email_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUp_email_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"

                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SignUpPasswordField"
                android:padding="10dp"
                android:hint="@string/password"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/edit_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#787878"
                app:hintTextColor="#787878"
                app:endIconMode="password_toggle"

                app:startIconDrawable="@drawable/ic_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/signUp_password_text_field"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/SignUpNameField"
                android:padding="10dp"
                android:hint="@string/full_name"
                app:hintTextColor="#787878"
                android:textColorHint="#787878"
                                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/edit_text_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_profile">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/signUp_Name_text_field"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_in"
                android:id="@+id/SignUpBTN"
                app:cornerRadius="32dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/Switch_to_login"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>